# netCDF

./: .gitignore  CMAKE_BUILD.md  CMakeLists.txt  Makefile  README.md  build.sh  extract_var.f90  netcdf.tmp2m.f  netcdf.tmp2m.f.compile.sh
extract_1var/: CMAKE_BUILD.md
extract_1var/v2.0/: copy_global_attributes.f90  copy_var_attributes.f90
src/: CMakeLists.txt
v1.0/: netcdf.tmp2m.f90  netcdf.tmp2m.py
v2.0/: extract_var.f90
